--- a/javascript/DOM_manipulation.html
+++ b/javascript/DOM_manipulation.html
@@ -63,10 +63,10 @@
 	<body>
 		
 		<div id="D1">
-			Vishal
+			Manuraj
 		</div><hr/>
 		
-		<input type="button" value="Alert Inline" onclick="alert('Hello Tarannum')" />
+		<input type="button" value="Alert Inline" onclick="alert('Hello Guys')" />
 		<input type="button" value="Alert Internal" onclick="alertFun()" />
 		<input type="button" value="Alert External" onclick="alertFunEx()" /><hr/>
 		
